<resources>
    <string name="app_name">Working Dog</string>
    <string name="Background" />

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="SummaryApp">"Gain back control of your life. Working Dog will help you to balance your Working Life balance or as we like to call it WLB. gain points, compare with others and live your life!"</string>
    <string name="titleWelcome">Control your working-life balance</string>
    <string name="LetsGetStarted">Lets Get Started</string>
    <string name="StartStop">Start/Stop</string>


    <string name="first_let_us_know_you">First, let us know you</string>
    <string name="what_s_your_job">What\'s Your Job ?</string>
    <string name="how_many_hours_do_you_work">How many hours do you work?</string>
    <string name="done">Done!</string>
    <string-array name="numbers0_24">
        <item>Select a number...</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
    </string-array>
    <string-array name="jobs">
        <item>Select a job...</item>
        <item>Developer</item>
        <item>Engineer</item>
    </string-array>


    <!-- Day quality strings -->
    <string name="how_was_hour_sleep">How was your sleep?</string>
    <string name="zero_very_bad">Very bad</string>
    <string name="one_poor">Poor</string>
    <string name="two_soso">So-so</string>
    <string name="three_ok">OK</string>
    <string name="four_pretty_good">Pretty good</string>
    <string name="five_excellent">Excellent!</string>


    <!-- Output to TextView styled with a little HTML -->
    <string name="title"><![CDATA[<h3>HERE IS YOUR ACTIVITY DATA</h3>]]></string>
    <string name="start_time"><![CDATA[<b>Start:</b>]]></string>
    <string name="end_time"><![CDATA[<b>End:</b>]]></string>
    <string name="quality"><![CDATA[<b>Quality:</b>]]></string>
    <string name="hours_slept"><![CDATA[<b>Hours:Minutes:Seconds</b>]]></string>

    <!-- App title and fragment titles -->

    <string name="activity_tracker_fragment">ActivityTrackerFragment</string>
    <string name="startWork">Start work</string>
    <string name="stopWork">Stop work</string>
    <string name="fwf">hello</string>
    <string name="dogImageExplain" />
    <string name="about">About</string>
    <string name="todo">TODO</string>
    <string name="welcomingDog">welcoming dof</string>
    <string name="Start">start</string>
    <string name="init">0</string>
    <string name="Clear">Clear</string>
</resources>