<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>
        <variable
            name="GetToKnowFragment"
            type="com.example.workingdog.GetToKnowFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:theme="@style/AppTheme"
        tools:context=".WelcomeFragment">

        <TextView
            android:id="@+id/titelHome2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:text="@string/first_let_us_know_you"
            android:textColor="@color/black"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/q1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titelHome2"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:paddingTop="20dp"
            android:text="@string/what_s_your_job"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titelHome2" />

        <!--        <SeekBar-->
        <!--            android:id="@+id/seekBar"-->
        <!--            style="@style/Widget.AppCompat.SeekBar.Discrete"-->
        <!--            android:layout_width="315dp"-->
        <!--            android:layout_height="40dp"-->
        <!--            android:layout_below="@id/q3_spinner"-->
        <!--            android:layout_marginTop="41dp"-->
        <!--            android:background="@drawable/rounded_corners"-->
        <!--            android:max="24"-->
        <!--            android:min="0"-->
        <!--            android:progress="8" />-->

        <Spinner
            android:id="@+id/job_spinner"
            android:layout_width="195dp"
            android:layout_height="40dp"
            android:layout_below="@+id/q1"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:autofillHints="select job"
            android:background="@drawable/rounded_corners"
            android:entries="@array/jobs"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/q1" />

        <TextView
            android:id="@+id/q2"
            android:layout_width="341dp"
            android:layout_height="54dp"
            android:layout_below="@+id/job_spinner"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:paddingTop="20dp"
            android:text="@string/how_many_hours_do_you_work"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/job_spinner" />

        <Spinner
            android:id="@+id/num0_24_spinner"
            android:layout_width="195dp"
            android:layout_height="40dp"
            android:layout_below="@+id/q2"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_corners"
            android:entries="@array/numbers0_24"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/q2" />

        <TextView
            android:id="@+id/q3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/num0_24_spinner"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:paddingTop="20dp"
            android:text="@string/sleepTime"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/num0_24_spinner" />

        <Spinner
            android:id="@+id/q3_spinner"
            android:layout_width="195dp"
            android:layout_height="40dp"
            android:layout_below="@+id/q3"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_corners"
            android:entries="@array/numbers0_24"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/q3" />

        <Button
            android:id="@+id/buttonDone"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="24dp"
            android:background="@drawable/rounded_corners"
            android:text="@string/done"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>