<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorApp"

    android:theme="@style/AppTheme"
    tools:context=".HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/titleWelcome"
            android:layout_width="395dp"
            android:layout_height="90dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="11dp"
            android:layout_marginBottom="529dp"
            android:fontFamily="@font/roboto"
            android:text="@string/titleWelcome"
            android:textAlignment="center"
            android:textColor="#0B4325"
            android:textSize="35sp"
            app:layout_constraintBottom_toTopOf="@+id/summaryApp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.562"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.747" />

        <TextView
            android:id="@+id/summaryApp"
            android:layout_width="364dp"
            android:layout_height="194dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="149dp"
            android:layout_marginEnd="23dp"
            android:layout_marginBottom="316dp"
            android:text="@string/SummaryApp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonLetsGetStarted"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageLetsDoThis"
            android:layout_width="384dp"
            android:layout_height="318dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="18dp"
            android:layout_marginTop="279dp"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="62dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.752"
            app:srcCompat="@drawable/letsdothis" />

        <Button
            android:id="@+id/buttonLetsGetStarted"
            android:layout_width="233dp"
            android:layout_height="69dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="71dp"
            android:layout_marginEnd="75dp"
            android:layout_marginBottom="33dp"
            android:background="@drawable/rounded_corners"
            android:text="@string/LetsGetStarted"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageLetsDoThis"
            app:layout_constraintVertical_bias="0.86" />
    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>